--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body{
     margin-bottom: 15px;
     width:100%;
     display: inline-block;
+    padding-bottom: 400px;
 }
 .achivements_head i{
     float: right;
