--- a/style.css
+++ b/style.css
@@ -42,3 +42,19 @@ body{
 .achivements_text span{
     color:#ff7700;
 }
+#neverskip{
+    width: 150px;
+}
+.new_li{
+    margin-top: 13px;
+}
+.new_li h4{
+    border-bottom: 1px solid white;
+    padding: 8px;
+}
+.new_li img{
+    border-radius: 25px;
+}
+.new_li p{
+    margin-top: 10px
+}
